[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/map_editor/ui.gd" type="Script" id=1]
[ext_resource path="res://scenes/map_editor/tile_view.tscn" type="PackedScene" id=2]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="position" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -54.0
margin_right = 72.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="position"]
margin_left = 20.0
margin_top = 20.0
margin_right = 52.0
margin_bottom = 34.0
text = "[0, 0]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tile" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -267.0
margin_top = -236.0
margin_right = -67.0
margin_bottom = -36.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="tile"]
visible = false
position = Vector2( 100, -90 )
scale = Vector2( 1.2, 0.6 )

[node name="Node2D2" type="Node2D" parent="tile/Node2D"]
visible = false
rotation = 0.785398
scale = Vector2( 2, 2 )

[node name="rect" type="ColorRect" parent="tile/Node2D/Node2D2"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 180.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tile_view_prev" parent="tile" instance=ExtResource( 2 )]
position = Vector2( 0, 70 )
viewport_size = 40
is_side_tile = true

[node name="tile_type_next" parent="tile" instance=ExtResource( 2 )]
position = Vector2( 100, -30 )
viewport_size = 40
is_side_tile = true

[node name="tile_type_prev" parent="tile" instance=ExtResource( 2 )]
position = Vector2( 100, 170 )
viewport_size = 40
is_side_tile = true

[node name="tile_view_next" parent="tile" instance=ExtResource( 2 )]
position = Vector2( 200, 70 )
viewport_size = 40
is_side_tile = true

[node name="tile_view_current" parent="tile" instance=ExtResource( 2 )]
position = Vector2( 100, 70 )
